# claude-session-player

./: .env.example  .gitignore  CLAUDE.md  README.md  claude-code-session-protocol-schema.md  pyproject.toml
.claude/agents/: dev.md  wiki-docs-writer.md
.claude/commands/: create-spec.md
.claude/specs/: claude-session-player.md  event-driven-renderer.md  event-streaming.md
claude_session_player/: __init__.py  cli.py  consumer.py  emitter.py  events.py  formatter.py  models.py  parser.py  processor.py  protocol.py  renderer.py  slack_consumer.py  telegram_consumer.py  tools.py
claude_session_player/watcher/: __init__.py  __main__.py  api.py  bot_router.py  config.py  debouncer.py  deps.py  destinations.py  event_buffer.py  file_watcher.py  indexer.py  message_binding.py  message_state.py  search.py  (+14 more)
issues/: 01-project-scaffolding-and-models.md  02-jsonl-parser-and-line-classification.md  03-user-message-rendering.md  04-assistant-text-rendering.md  05-tool-call-rendering-and-abbreviation.md  06-tool-result-matching-and-rendering.md  07-thinking-duration-system-messages.md  08-progress-message-rendering.md  09-compaction-subagents-edge-cases.md  10-integration-tests-real-sessions.md  11-stress-test-longest-sessions.md  README.md
tests/: conftest.py  test_cli_index.py  test_consumer.py  test_emitter.py  test_events.py  test_formatter.py  test_integration.py  test_models.py  test_parser.py  test_processor.py  test_protocol.py  test_question.py  test_renderer.py  test_slack_consumer.py  test_stress.py  test_telegram_consumer.py  test_tools.py  test_watch_session.py
(+143 files in other folders)
