[project]
name = "claude-session-player"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
claude-session-player = "claude_session_player.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "pytest-asyncio>=0.23"]
slack = ["slack-sdk>=3.0", "aiohttp>=3.0"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
