[project]
name = "claude-session-player"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
claude-session-player = "claude_session_player.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "pytest-asyncio"]
slack = ["slack-sdk>=3.0", "aiohttp>=3.0"]
telegram = ["python-telegram-bot>=21.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
